# resource-resolver

./: .envrc  .gitignore  README.md  pyproject.toml  pytest.ini  setup.py
src/resource_resolver/: __init__.py  tests.py
src/resource_resolver/core/: ResourceProxy.py  ResourceResolver.py  __init__.py  errors.py  managers.py  proxy.py  resolver.py
src/resource_resolver/utils/: pandas.py
tests/: conftest.py
tests/test_core/: test_resource_resolver.py
tests/test_resource_utils/: test_pandas_utils.py
tests/test_utils/: test_pandas_utils.py
