[tool.poetry]
name = "resource-resolver"
version = "0.3.0"
description = "Provides tools to abstract away resource I/O."
authors = ["Moye Odiase <moye-odiase@element-energy.co.uk>"]
license = "MIT"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests/unit.py",
]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.18.1"
pyarrow = "^5.0.0"
pandas = "^1.3.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
autopep8 = "^1.5.7"
pandas = "^1.3.0"
build = "^0.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
